re PR lto/51280 (ICE when lto1 does not have -fgnu-tm and object file uses TM)

PR lto/51280
        * lto-wrapper.c (run_gcc): Pass -fgnu_tm on.
        (merge_and_complain): Same.

From-SVN: r183303